--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-SoundSource/BassInvaders*
-SoundSource/*.a
-SoundSource/*.wav
-SoundSource/*.ogg
-SoundSource/*.mp3
-SoundSource/*.out
-SoundSource/*.err
-SoundSource/*.cdr
-SoundSource/build
+*.a
+*.wav
+*.ogg
+*.mp3
+*.out
+*.err
+*.cdr
+build/
 *.1
 *.xcodeproj
-build
+Debug/
