--- a/BassInvaders/.project
+++ b/BassInvaders/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BassInvaders</name>
+	<name>Copy of BassInvaders</name>
 	<comment></comment>
 	<projects>
 	</projects>
